walkthroughs/custom-policy/policies/force-pod-label-value/samples/blocked2.yaml
# this fails because it doesn't contain right value for all labels
apiVersion: v1
kind: Pod
metadata:
  labels:
    env: prod
    owner: john
    foo: bar
  name: foobartest
  namespace: default
