walkthroughs/custom-policy/policies/force-pod-label-value/samples/working.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    env: test
    owner: bob
    foo: bar
  name: foobartest
  namespace: default
